--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "my-vue-app",
+  "name": "taoyuan",
+  "title": "桃源乡",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.1.0",
   "type": "module",
+  "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:electron": "esbuild electron/main.js --bundle --platform=node --format=esm --outfile=dist-electron/main.js --external:electron && esbuild electron/preload.js --bundle --platform=node --format=cjs --outfile=dist-electron/preload.js --external:electron && electron-builder"
   },
   "dependencies": {
     "@vueuse/core": "^14.2.0",
@@ -17,7 +20,10 @@
     "qmsg": "^1.6.2",
     "tone": "^15.1.22",
     "vue": "^3.5.24",
-    "vue-router": "^5.0.2"
+    "vue-router": "^5.0.2",
+    "esbuild": "^0.25.0",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -30,5 +36,35 @@
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vue-tsc": "^3.1.4"
+  },
+  "build": {
+    "appId": "games.wenzi.taoyuan",
+    "productName": "桃源乡",
+    "asar": false,
+    "files": [
+      "dist-electron/**/*",
+      "docs/**/*",
+      "public/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "output": "pkg"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "public/favicon.ico",
+      "verifyUpdateCodeSignature": false,
+      "artifactName": "taoyuan-Setup.${ext}"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "allowElevation": true,
+      "installerIcon": "public/favicon.ico",
+      "uninstallerIcon": "public/favicon.ico",
+      "installerHeaderIcon": "public/favicon.ico",
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
   }
 }
