chore(ci): 本地化 Issue 模板并优化 build workflow
本次提交对仓库的贡献者体验和 CI 流程做了若干调整：

- 更新 .github/ISSUE_TEMPLATE 中的多个模板（BUG、功能请求、体验反馈），改进字段结构、标题与说明，使模板更适合中文用户提交问题与反馈。
- 新增 .github/ISSUE_TEMPLATE/config.yml，禁用空白 Issue 并添加交流群联系链接，便于引导非 BUG 类讨论到 QQ 群。
- 调整 .github/workflows/build.yml：将步骤名称与注释本地化为中文、统一命名风格并微调 Node/Java/Gradle 配置；移除基于 ImageMagick 的 Android 图标生成步骤；优化并重命名若干构建与上传产物步骤以提高可读性。

目的：提升中文贡献者填写 Issue 的体验，统一 CI 步骤命名与说明，简化 Android 构建流程的部分繁琐步骤。

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   # 1. 构建 Electron 客户端
   build-electron:
-    name: Build Electron (${{ matrix.os }})
+    name: 构建 Electron (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -21,13 +21,13 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: latest
-      - name: Setup Node
+      - name: 配置 Node
         uses: actions/setup-node@v6
         with:
           node-version: 20
           cache: 'pnpm'
 
-      - name: Cache Electron Builder
+      - name: 缓存 Electron Builder
         uses: actions/cache@v5
         with:
           path: |
@@ -37,7 +37,7 @@ jobs:
           restore-keys: |
             electron-${{ runner.os }}-
 
-      - name: Build Electron
+      - name: 构建 Electron
         run: |
           pnpm install
           pnpm run build:electron --${{ matrix.platform }}
@@ -45,7 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # 【关键点】上传 zip 产物
-      - name: Upload Electron Package
+      - name: 上传 Electron 安装包
         uses: actions/upload-artifact@v4
         with:
           name: electron-${{ matrix.platform }}
@@ -54,70 +54,47 @@ jobs:
 
   # 2. 构建 Android APK
   build-android:
-    name: Build Android APK
+    name: 构建 Android APK
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
       - uses: pnpm/action-setup@v4
         with:
           version: latest
-      - name: Setup Node
+      - name: 配置 Node
         uses: actions/setup-node@v6
         with:
           node-version: 22
           cache: 'pnpm'
-      - name: Setup Java
+      - name: 配置 Java
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
           java-version: '21'
-      - name: Setup Android SDK
+      - name: 配置 Android SDK
         uses: android-actions/setup-android@v3
 
       # 使用官方 Gradle Action（内置智能缓存）
-      - name: Setup Gradle
+      - name: 配置 Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
           cache-read-only: false
 
-      - name: Build Frontend
+      - name: 构建前端
         run: |
           pnpm install
           pnpm run build
 
-      - name: Install ImageMagick
-        run: sudo apt-get update && sudo apt-get install -y imagemagick
-
-      - name: Generate Android Icons
-        run: |
-          # 使用 ImageMagick 从 logo.png 生成各尺寸图标
-          convert images/logo-1.png -resize 48x48 android/app/src/main/res/mipmap-mdpi/ic_launcher.png
-          convert images/logo-1.png -resize 48x48 android/app/src/main/res/mipmap-mdpi/ic_launcher_round.png
-          convert images/logo-1.png -resize 72x72 android/app/src/main/res/mipmap-hdpi/ic_launcher.png
-          convert images/logo-1.png -resize 72x72 android/app/src/main/res/mipmap-hdpi/ic_launcher_round.png
-          convert images/logo-1.png -resize 96x96 android/app/src/main/res/mipmap-xhdpi/ic_launcher.png
-          convert images/logo-1.png -resize 96x96 android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.png
-          convert images/logo-1.png -resize 144x144 android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
-          convert images/logo-1.png -resize 144x144 android/app/src/main/res/mipmap-xxhdpi/ic_launcher_round.png
-          convert images/logo-1.png -resize 192x192 android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png
-          convert images/logo-1.png -resize 192x192 android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.png
-          # foreground 图标（108dp 含 72dp 安全区）
-          convert images/logo-1.png -resize 108x108 android/app/src/main/res/mipmap-mdpi/ic_launcher_foreground.png
-          convert images/logo-1.png -resize 162x162 android/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.png
-          convert images/logo-1.png -resize 216x216 android/app/src/main/res/mipmap-xhdpi/ic_launcher_foreground.png
-          convert images/logo-1.png -resize 324x324 android/app/src/main/res/mipmap-xxhdpi/ic_launcher_foreground.png
-          convert images/logo-1.png -resize 432x432 android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_foreground.png
-
-      - name: Sync Capacitor
+      - name: 同步 Capacitor
         run: npx cap sync android
 
-      - name: Build APK (Release)
+      - name: 构建 APK (Release)
         working-directory: android
         run: |
           chmod +x ./gradlew
           ./gradlew assembleRelease --build-cache
 
-      - name: Upload APK Artifacts
+      - name: 上传 APK 产物
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
@@ -132,18 +109,18 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: Get Version
+      - name: 获取版本号
         id: get_version
         run: echo "VERSION=v$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
       # 1. 下载时，不使用 merge-multiple，防止覆盖冲突
-      - name: Download Artifacts
+      - name: 下载构建产物
         uses: actions/download-artifact@v4
         with:
           path: ./raw-assets
 
       # 2. 核心步骤：手动移动文件到一个扁平目录，并强制重命名
-      - name: Flatten and Rename Assets
+      - name: 整理并重命名产物
         run: |
           mkdir -p ./final-release
 
@@ -158,7 +135,7 @@ jobs:
           ls -R ./final-release
 
       # 3. 删除已有 Release 的文件（如果存在）
-      - name: Delete existing release assets
+      - name: 删除已有 Release 资产
         run: |
           VERSION=${{ steps.get_version.outputs.VERSION }}
           # 获取 release 的所有资产并删除
@@ -171,7 +148,7 @@ jobs:
         continue-on-error: true
 
       # 4. 上传新文件
-      - name: Create GitHub Release
+      - name: 创建 GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.get_version.outputs.VERSION }}
